# fastcpd-py

./: WORKSPACE  pyproject.toml  requirements.in  requirements_lock.txt
.github/workflows/: ci.yml  release.yml
cmake/: FastcpdDependencies.cmake  FastcpdTarget.cmake
cpp/: fastcpd.cc
python/: BUILD.bazel  CMakeLists.txt  README.md  __init__.py  confidence.py  fastcpd_py.cc  fastcpd_py.h  pybind.cc  segmentation.py  variance_estimation.py
tests/: test_fastcpd.py
